--- a/web/index.html
+++ b/web/index.html
@@ -11,5 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Hola soy Ramon Espinoza Ramirez estudiante de la carrera de Tecnologias de la Informacion
+        <h1>Hola soy Ramon Espinoza Ramirez</h1>
+    </body>
 </html>
